# CG_Solver_GPU

./: .gitignore  CMakeLists.txt  compile.sh  main.cu
cmake/: CCCL.cmake  GCXX.cmake  NCCL.cmake  NVTX.cmake
headers/: cg-util.h  cuda-util.h  gpu_kernels.cuh  kernel.cuh  kernels.cuh  mpi_comm.hpp  nccl_comm.hpp  util.h
tests/: CMakeLists.txt  test_init_cg.cpp
